# classroom-vault

./: .gitignore  CMakeLists.txt  README.md  build-windows.bat  config.example.json  sample_classroom_data.json
build-asan/: CMakeCache.txt
build-ubsan/: CMakeCache.txt
cmake/: cmake_uninstall.cmake.in
packaging/linux/: classroom-vault.desktop  io.github.ric4rdo149.ClassroomVault.metainfo.xml
resources/: app.qrc
resources/windows/: app.rc
src/: AttachmentChecksumManager.cpp  AttachmentChecksumManager.hpp  AttachmentDownloader.cpp  AttachmentDownloader.hpp  ClassroomClient.cpp  ClassroomClient.hpp  ConfigManager.cpp  ConfigManager.hpp  DriveClient.cpp  DriveClient.hpp  FolderOrganizer.cpp  FolderOrganizer.hpp  GoogleAuth.cpp  GoogleAuth.hpp  MainWindow.cpp  MainWindow.hpp  Models.hpp  Paths.hpp  SyncDiffEngine.cpp  SyncDiffEngine.hpp  SyncManager.cpp  SyncManager.hpp  SyncStagingManager.cpp  SyncStagingManager.hpp  SyncStateManager.cpp  SyncStateManager.hpp  Utils.hpp  main.cpp
src/ui/: ActivityDrawerWidget.cpp  ActivityDrawerWidget.hpp  ActivityPanelWidget.cpp  ActivityPanelWidget.hpp  AssignmentDetailWidget.cpp  AssignmentDetailWidget.hpp  AssignmentListItemWidget.cpp  AssignmentListItemWidget.hpp  AssignmentStatusResolver.cpp  AssignmentStatusResolver.hpp  AttachmentCardWidget.cpp  AttachmentCardWidget.hpp  AttachmentsViewWidget.cpp  AttachmentsViewWidget.hpp  BreadcrumbWidget.cpp  BreadcrumbWidget.hpp  CourseCardWidget.cpp  CourseCardWidget.hpp  CourseDetailWidget.cpp  CourseDetailWidget.hpp  CourseGridWidget.cpp  CourseGridWidget.hpp  DashboardWidget.cpp  DashboardWidget.hpp  HeroStripWidget.cpp  HeroStripWidget.hpp  HistoryViewWidget.cpp  HistoryViewWidget.hpp  HomeDashboardWidget.cpp  HomeDashboardWidget.hpp  KpiCardWidget.cpp  KpiCardWidget.hpp  MainWindow.cpp  MainWindow.hpp  MetadataReader.cpp  MetadataReader.hpp  PathBarWidget.cpp  PathBarWidget.hpp  PublicationListItemWidget.cpp  PublicationListItemWidget.hpp  (+17 more)
